--- a/frontend/greenlight/index.html
+++ b/frontend/greenlight/index.html
@@ -3,7 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>NewsChain Greenlight</title>
-    <link rel="stylesheet" href="/styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .cluster {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+        }
+        .cluster h2 {
+            margin-top: 0;
+        }
+        .cluster ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .cluster li {
+            margin: 5px 0;
+        }
+        .cluster button {
+            margin-right: 10px;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+        #error {
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
